--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+0.1.1
+
+Changed presence back to activity
+Changed status carousel from 1 minute to 10 minutes
+
+Started the beginning of the moderation framework:
+- Added  basic moderation help menu (noted)
+- Added basic moderation framework (noted)
+
 0.1.0
 
 Updated to Discord.js v13
